<resources>
    <string name="app_name">餐饮系统</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_title">登录</string>
    <string name="logout">退出登录</string>
    <string name="switch_merchant">切换门店</string>
    <string name="switch_account">切换账户</string>
    <string name="title_activity_main">桌位列表</string>

    <string name="hello">，你好</string>
    <string name="error_no_user_selected">请在左侧选择一个要切换的用户</string>
    <string name="system">系统</string>
    <string name="settings">设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">请输入正确的邮箱</string>
    <string name="error_invalid_password">密码不能少于4位</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_settings">Settings</string>

    <string name="table_free">空闲</string>
    <string name="table_opened">已开桌</string>
    <string name="table_dining">用餐中</string>
    <string name="table_cleaning">待清理</string>
    <string name="table_reserved">已预订</string>
    <string name="table_locking">已锁定</string>

    <string name="refresh_success">刷新成功</string>
    <string name="refresh_error">刷新失败</string>

    <string name="input_other_name">输入其他姓氏</string>

    <string name="select_or_input_name">请输入姓氏</string>
    <string name="input_mobile">请输入电话</string>
    <string name="input_people_number">请输入就餐人数</string>
    <string name="male">男</string>
    <string name="male_nick">先生</string>
    <string name="female">女</string>
    <string name="female_nick">女士</string>

    <string name="error_customer_name_required">请输入姓氏</string>
    <string name="error_mobile_required">请输入电话</string>
    <string name="error_mobile_format">请输入正确的电话</string>
    <string name="error_people_number_required">请输入就餐人数</string>

    <string name="ok">确定</string>

    <string-array name="number_keyboard">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>.</item>
        <item>0</item>
        <item>删除</item>
    </string-array>

    <string-array name="telephone_keyboard">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>清空</item>
        <item>0</item>
        <item>删除</item>
    </string-array>
    <string-array name="customer_name">
        <item>王</item>
        <item>李</item>
        <item>张</item>
        <item>刘</item>
        <item>陈</item>
        <item>杨</item>
        <item>黄</item>
        <item>赵</item>
        <item>周</item>
        <item>吴</item>
        <item>徐</item>
        <item>孙</item>
        <item>何</item>
        <item>高</item>
        <item>胡</item>
        <item>郑</item>
        <item>许</item>
        <item>冯</item>
        <item>曾</item>
        <item>邓</item>
        <item>于</item>
        <item>余</item>
        <item>梁</item>
        <item>韩</item>
        <item>朱</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
