<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:text="admin"/>

    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:text="admin@123"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_primary"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/btn_primary"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
