<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zkboys.androiddemo.view.activities.Demo2Activity">

    <com.zkboys.androiddemo.view.components.ToolBar
        xmlns:toolbar="http://schemas.android.com/apk/res/com.zkboys.androiddemo"
        android:id="@+id/tb_customer_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        toolbar:title="编辑用户信息"/>

    <RelativeLayout
        android:id="@+id/rl_customer_info"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_customer_info_toolbar"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:id="@+id/tv_customer_info_table_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/v_customer_info_table_name_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_customer_info_table_name"
            android:background="@color/borderColorPrimary"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_customer_info_customer_name"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@id/v_customer_info_table_name_line"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:gravity="bottom">

            <EditText
                android:id="@+id/et_customer_info_customer_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_or_input_name"
                android:textSize="18sp"
                />

        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:id="@+id/rg_customer_info_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_customer_info_table_name_line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/til_customer_info_customer_name"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_customer_info_male"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:checked="true"
                android:gravity="center"
                android:text="@string/male_nick"
                />

            <RadioButton
                android:id="@+id/rb_customer_info_female"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/female_nick"
                />
        </RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_customer_info_customer_mobile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/til_customer_info_customer_name"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:gravity="bottom">

            <EditText
                android:id="@+id/et_customer_info_customer_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_mobile"
                android:textSize="18sp"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_customer_info_customer_people_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/til_customer_info_customer_mobile"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:gravity="bottom">

            <EditText
                android:id="@+id/et_customer_info_customer_people_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_people_number"
                android:textSize="18sp"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_customer_info_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_customer_info_customer_people_number"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_primary"
            android:text="@string/ok"
            android:textColor="@color/white"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tb_customer_info_toolbar"
        android:layout_toEndOf="@id/rl_customer_info"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <com.zkboys.androiddemo.view.components.Keyboard
            android:id="@+id/rv_customer_keyboard"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_customer_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rv_customer_keyboard"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_customer_input_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/input_other_name"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</RelativeLayout>