<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_switch_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zkboys.androiddemo.view.activities.SwitchAccountActivity">

    <com.zkboys.androiddemo.view.components.ToolBar
        xmlns:toolbar="http://schemas.android.com/apk/res/com.zkboys.androiddemo"
        android:id="@+id/tb_switch_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        toolbar:title="@string/switch_account"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_switch_account_users"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tb_switch_account_toolbar"
        android:background="@drawable/bg_right_border"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"/>

    <RelativeLayout
        android:id="@+id/rl_switch_account_login_form"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tb_switch_account_toolbar"
        android:layout_toEndOf="@id/rv_switch_account_users"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/til_password"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="-150dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_switch_account_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_no_user_selected"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                />

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-150dp"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/tv_switch_account_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="50dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="50dp"
                            android:text="@string/hello"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_login_failed_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textColor="@color/textColorError"
                        />

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_primary"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
